--- a/browser/manifest.json
+++ b/browser/manifest.json
@@ -10,7 +10,8 @@
     },
     "host_permissions": [
         "*://*.discord.com/*",
-        "https://raw.githubusercontent.com/*"
+        "https://raw.githubusercontent.com/*",
+        "<all_urls>"
     ],
     "permissions": [
         "declarativeNetRequest"
@@ -19,7 +20,7 @@
         {
             "run_at": "document_start",
             "matches": [
-                "*://*.discord.com/*"
+                "*://*.discord.com/*", "<all_urls>"
             ],
             "js": [
                 "content.js"
@@ -30,7 +31,7 @@
         {
             "run_at": "document_start",
             "matches": [
-                "*://*.discord.com/*"
+                "*://*.discord.com/*", "<all_urls>"
             ],
             "js": [
                 "dist/Vencord.js"
@@ -46,7 +47,7 @@
                 "third-party/*"
             ],
             "matches": [
-                "*://*.discord.com/*"
+                "*://*.discord.com/*", "<all_urls>"
             ]
         }
     ],
